Fixed Image Rendering Issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, SRS, Student Registration System">
 
     <!-- FAVICON HERE -->
-    <link rel="icon" type="image/x-icon" href="/images/favIcon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favIcon.png">
 
     <!-- "KANIT" FONT LINKED HERE -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -152,7 +152,6 @@
         <hr>
         <center>Made with ♥ by 𝓟𝓻𝓮𝓬𝓲𝓸𝓾𝓼</center>
     </footer>
-
 
     <script src="./includes/script.js">
     </script>
